<?xml version="1.0"?>
<package format="2">
  <name>app_to_django</name>
  <version>0.1.1</version>
  <description>
    Python Template ROS node for use with catkin following good practices
  </description>
  <maintainer email="bcchoi@aspringclound.com">Bcchoi</maintainer>
  <license>BSD</license>
  <url type="website">https://github.com/e</url>
  <url type="repository">https://github.com/</url>
  <author email="bcchoi@aspringclound.com">Bcchoi</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>py_trees</build_depend>
  <build_depend>smach</build_depend>

  <doc_depend>python-catkin-sphinx</doc_depend>
  <doc_depend>python-catkin-pkg</doc_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
